feat: implement JWT authentication and Swagger authorization